Update to vaadin 8.0.0.alpha6. vaadin/spreadsheet#403
* Update to vaadin 8.0.0.alpha6.

Fix pom, fix demoUI, fix widgetset, use compatibility-package